@@ -24,6 +24,7 @@ Import-Package: com.openexchange.api2,
  com.openexchange.groupware.userconfiguration,
  com.openexchange.java,
  com.openexchange.log,
+ com.openexchange.mail.mime,
  com.openexchange.mail.usersetting,
  com.openexchange.osgi,
  com.openexchange.resource,
